Resolved the alignment & design issue thriughout all section

--- a/src/css/about.css
+++ b/src/css/about.css
@@ -217,10 +217,9 @@
 .about-vision-title {
     font-family: "Neue Haas Grotesk Text Pro";
     font-style: italic;
-    font-size: 100px;
+    font-size: 115px;
     font-weight: 400;
-    line-height: 1.1;
-    margin-bottom: 2rem;
+    margin-bottom: 4rem;
     white-space: nowrap;
     color: #030303;
     
@@ -288,6 +287,8 @@
     font-style: normal;
     font-weight: 500;
     line-height: 55px;
+    text-indent: 89px;
+    max-width: 1000px;
 }
 
 .about-visuals {
