--- a/src/css/strategic.css
+++ b/src/css/strategic.css
@@ -68,6 +68,7 @@
     letter-spacing: 0;
     margin-top: 20px;
     white-space: nowrap;
+    margin-bottom: 30px;
 }
 
 .blue-text {
